sample/msvc/error/c2021.cpp
// C2021.cpp
float test1=1.175494351E;   // C2021
